--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,15 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
 
-    - name: Set up R
-      uses: r-lib/actions/setup-r@v1
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
       with:
-        r-version: 4.x
+        node-version: '20'
+
+    - name: Set up R
+      uses: r-lib/actions/setup-r@v2
+      with:
+        r-version: '4.1'  # Specify a valid R version here
 
     - name: Install R packages
       run: |
@@ -24,4 +29,3 @@ jobs:
 
     - name: Run R script
       run: Rscript code.r  # Replace with the path to your R script
-
