--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,6 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
-
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
       with:
@@ -25,7 +20,7 @@ jobs:
 
     - name: Install R packages
       run: |
-        R -e 'install.packages(c("shiny", "tidyverse", "shinydashboard", "plotly"))'
+        R -e 'install.packages(c("shiny", "shinydashboard", "plotly"))'
 
     - name: Run R script
       run: Rscript code.r  # Replace with the path to your R script
